[project]
name = "transformer-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers[sentencepiece]>=5.12.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"
