[project]
name = "transformer-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.0",
    "datasets>=1.1.1",
    "evaluate>=0.2.0",
    "huggingface-hub>=1.21.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers[sentencepiece,torch]>=5.12.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu132"

[dependency-groups]
dev = [
    "asttokens>=3.0.1",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
